<resources>
    <string name="app_name">Hasagi It!</string>
    <string name="my_food">My Food</string>
    <string name="calories">Calories</string>
    <string name="carb">Carb</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="title_app">Hasagi It</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="login">LOGIN</string>
    <string name="gender">Gender</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">I agree to the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="add_food">Add Food</string>
    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="calendar">Calendar</string>
    <string name="my_day">My Day</string>
    <string name="food">Food</string>
    <string name="profile">Profile</string>
    <string name="search_here">Search here</string>
    <string name="tittle_search">YAOSU\'S FOOD</string>
    <string name="age">Age</string>
    <string name="mail_admin">admin@gmail.com</string>
    <string name="switch_user">Switch User</string>
    <string name="add_food_day">Add to my day</string>
    <string name="food_image">Food Image</string>
    <string name="recipe">Recipe</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="goal">Goal</string>
    <string name="fitness">Fitness</string>
    <string name="fitness_level">Choose your activity</string>
    <string name="explain_choose_level">Choose activity to calculate the Calories you burn.</string>
    <string name="beginner">EXERCISE</string>
    <string name="def_beginner">Fitness exercise</string>
    <string name="intermediate">OUTDOOR</string>
    <string name="def_intermediate">Outdoor activities</string>
    <string name="advanced">SPORT</string>
    <string name="def_advanced">Sports activities</string>
    <string name="recommended_rate">Recommended Rate:</string>
    <string name="min">min</string>
    <string name="my_activities">My Activities</string>
    <string name="total_calories_burned">Total calories burned:</string>
    <string name="total_calorie_burned">Total calorie burned:</string>
    <string name="add_to_calendar">Remind later</string>
    <string name="start">Start</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="new_food">New Food</string>
    <string name="camera">Camera</string>
    <string name="activities">Activities</string>
    <string name="title">Title</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="description">Description</string>
    <string name="note">Note</string>
    <string name="log_out">Log out</string>
    <string name="bmi">BMI ?</string>
    <string name="avatar">avatar</string>
    <string name="bmi_">BMI ?</string>
</resources>
