<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/header_main"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/title_app"
            android:textColor="@color/white_greyish"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="cursive"
            />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:drawableStart="@drawable/user"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:drawableStart="@drawable/email"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <EditText
                android:id="@+id/age"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/age_ios"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/age"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"
                android:drawableStart="@drawable/age_ios"
                android:importantForAutofill="no" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white_greyish"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:fontFamily="sans-serif-light"
                    />
                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal"
                    android:checkedButton="@id/female"
                    android:layout_marginStart="8dp">
                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:layout_gravity="center_vertical"
                        >
                    </RadioButton>
                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="3dp"
                        android:layout_marginStart="3dp">
                    </RadioButton>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <EditText
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/height_ios"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/height"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/height_ios"
                    android:fontFamily="sans-serif-light"
                    android:importantForAutofill="no" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/cm"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="5dp">
                </TextView>

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/white_greyish"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp">
                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/weight_ios"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/weight"
                    android:inputType="number"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/weight_ios"
                    android:fontFamily="sans-serif-light"
                    android:importantForAutofill="no" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/kg"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginStart="5dp">
                </TextView>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/pass_ios"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:drawableStart="@drawable/pass_ios"
            android:fontFamily="sans-serif-light"
            android:importantForAutofill="no" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/button_login_color"
            android:padding="3dp"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/alreadyUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:fontFamily="sans-serif-light"/>

    </LinearLayout>

</RelativeLayout>
