<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="20sp"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/dialogAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            android:layout_weight="7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="20sp"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/dialogHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="number"
            android:layout_weight="7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="20sp"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/dialogWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:layout_weight="7"/>
    </LinearLayout>

</LinearLayout>